Faltas revisadas de la parteB

--- a/memoria/partes/b/capitulo1.tex
+++ b/memoria/partes/b/capitulo1.tex
@@ -8,7 +8,7 @@ Cómo bien se nos explica en el enunciado de la práctica, tenemos que crear una
 
 Para definir una arquitectura de pizarra o de tuplas debemos entender que se trata de una arquitectura software, es decir un modelo básico en el que basarse para la creación de software similar y , por lo tanto, debemos describir qué es exactamente una arquitectura de pizarra, para seguidamente poder analizar en detalle la plataforma a crear.\\
 
-Para entender en concepto básico de esta arquitectura basta con fijarse en su nombre: \emph{\textquotedblleft pizarra\textquotedblright} y es que, en realidad se trata de eso, de una gran pizarra en la que cualquiera que tenga los conocimientos necesarios puede aportar sus: cálculos, procesos, metodologías, ... para la resolución de problemas de cualquier tipo.\\
+Para entender en concepto básico de esta arquitectura basta con fijarse en su nombre: \emph{\textquotedblleft pizarra\textquotedblright} y es que, en realidad se trata de eso, de una gran pizarra en la que cualquiera que tenga los conocimientos necesarios puede aportar sus: cálculos, procesos, metodologías, etc. para la resolución de problemas de cualquier tipo.\\
 
 Siguiendo con este ejemplo, en una resolución de problemas cualquiera encontraríamos a varias personas trabajando sobre una misma pizarra, a estos elementos en la arquitectura de pizarra se les conoce cómo \emph{agentes} y \emph{pizarra}, respectivamente.\\
 
@@ -52,10 +52,10 @@ El utilizar una arquitectura de pizarra para el diseño de la plataforma supone 
 
 Implica que no existe interrelación entre los agentes, sólo a través de la pizarra de manera que los agentes colaboran entre ellos para obtener una solución común al problema que se plantea. Por ejemplo, en una plataforma como GitHub, donde distintas personas, de distintos países del mundo, colaboran entre ellos, en este caso, en conseguir hacer un producto software, generalmente.\\
 
-Por otro lado, se nos dice en el enunciado que esta pizarra tendrá la característica de que se implementara siguiendo un modelo cliente-servidor, es decir: Debe estar preparada para poder crear la pizarra en un computador y cada agente en otro, conectados a través de la red, esto no quiere decir que en un mismo ordenador no s puedan ejecutar una aplicación cliente y otra servidor, al contrario, en caso de implementar algo de código la manera de probarlo sería de esta manera.
+Por otro lado, se nos dice en el enunciado que esta pizarra tendrá la característica de que se implementara siguiendo un modelo cliente-servidor, es decir: Debe estar preparada para poder crear la pizarra en un computador y cada agente en otro, conectados a través de la red, esto no quiere decir que en un mismo ordenador no se puedan ejecutar una aplicación cliente y otra servidor, al contrario, en caso de implementar algo de código, el modo de probarlo sería de esta manera.
 
 \section{¿Cómo va a ser la plataforma?}
-Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra, con tres operaciones básicas: Escribir(\textbf{in}), Leer(\textbf{out}) y escribir sin eliminar(\textbf{rd}).\\
+Nuestra plataforma irá destinada a la interacción de distintos agentes que podrán subir y modificar archivos a través de la pizarra, con tres operaciones básicas: Escribir(\textbf{in}), Leer(\textbf{out}) y Escribir sin eliminar(\textbf{rd}).\\
 
 La plataforma constará de dos partes:
 \begin{itemize}
