--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -13,7 +13,7 @@ La aplicación que tomamos como referencia para la extracción de requisitos per
 Pensar de un modo más aplicado nos ha permitido extraer requisitos con más facilidad, pensando en qué cosas serían necesarias para el buen funcionamiento de la aplicación.\\
 
 \subsection{Clasificación de requisitos}
-Una vez extraídos los requisitos es necesario clarificarlos, ya que no todos hacen referencia a una m isma parte de la funcionalidad, por ello se han clasificado según los siguientes criterios:
+Una vez extraídos los requisitos es necesario clarificarlos, ya que no todos hacen referencia a una misma parte de la funcionalidad, por ello se han clasificado según los siguientes criterios:
 
 \begin{itemize}
 	\item \textbf{Funcionales: }Son declaraciones de los servicios que debe proporcionar el sistema. Especifica la manera en que éste debe reaccionar a determinadas entradas. Especifica cómo debe comportarse el sistema en situaciones particulares.
@@ -27,7 +27,7 @@ Una vez extraídos los requisitos es necesario clarificarlos, ya que no todos ha
 
 \subsection{Pensamos en la posible aplicación}
 
-En cuanto a la hora de pensar en qué tipo de aplicación podría ser implementada se nos ocurrieron varias ideas\cite{discusionaplicacion}, pero optamos por quedarnos con una aplicación del ámbito educativo. Concretamente esta aplicación permitiría almacenar archivos en la pizarra o servidor y dependiendo del nivel del usuario (alumno o profesor) éste tendría habilitada unas u otras opciones, por ejemplo el profesor podría comparar los resultados de un grupo de prácticas de alumnos con los de otros para buscar copias o un alumno podría preguntar a otros grupos.\\
+En cuanto a la hora de pensar en qué tipo de aplicación podría ser implementada se nos ocurrieron varias ideas\cite{discusionaplicacion}, pero optamos por quedarnos con una aplicación del ámbito educativo. Concretamente, esta aplicación permitiría almacenar archivos en la pizarra o servidor y dependiendo del nivel del usuario (alumno o profesor), éste tendría habilitada unas u otras opciones, por ejemplo el profesor podría comparar los resultados de un grupo de prácticas de alumnos con los de otros para buscar copias o un alumno podría preguntar a otros grupos.\\
 
 Tras esta pequeña descripción de la aplicación, vamos a redactar una lista con sus requisitos para poder trabajar con ellos:
 
