--- a/memoria/diagramas/diag_clases.tex
+++ b/memoria/diagramas/diag_clases.tex
@@ -2,13 +2,13 @@
 \newcommand{\clases}{
 
 \begin{tikzpicture}
-\tikzumlset{font=\tiny}
+\tikzumlset{fill class=white, font=\tiny}
 % Clase Pizarra
 \umlclass[x=-6, y=5]{Pizarra}{
   -- estado : Estado \\ 
-  -- usuarios : ArrayList$<$Usuario$>$\\
-  -- estadisticas : ArrayList$<$Estadisticas$>$\\
-  -- niveles : ArrayList$<$Nivel$>$\\
+  -- usuarios : Vector$<$Usuario$>$\\
+  -- estadisticas : Vector$<$Estadisticas$>$\\
+  -- niveles : Vector$<$Nivel$>$\\
   -- conf : Configuracion\\
 }{ 
   + mostrarEstadisticas(String userid, Usuario user):String\\
@@ -25,8 +25,8 @@
   + configurarPizarra(Configuracion config, Usuario user): Bool\\
   + getUsuario(String userid):Usuario\\
   -- setEstado(Estado)\\
-  -- setUsuarios(ArrayList$<$Usuario$>$)\\
-  -- setEstadisticas(ArrayList$<$Estadisticas$>$)\\
+  -- setUsuarios(Vector$<$Usuario$>$)\\
+  -- setEstadisticas(Vector$<$Estadisticas$>$)\\
   -- comprobarPermisos(Usuario user, int permiso):Bool
 }
 
@@ -98,7 +98,7 @@
 
 % Clase Estado
 \umlclass[x=-9, y=10]{Estado}{
-  -- ArrayList$<$Elemento$>$
+  -- Vector$<$Elemento$>$
 }{
 
 }
@@ -112,7 +112,7 @@
 
 % Clase Carpeta
 \umlclass[x=-18, y=6]{Carpeta}{
-   -- ArrayList$<$Elemento$>$
+   -- Vector$<$Elemento$>$
 }{
 
 }
@@ -134,8 +134,104 @@
    + getPermisos():Bool[]
 }
 
-% Nota de la clase Nivel
-\umlnote[x=-16, y=-2, width=5cm]{Nivel}{\textbf{\$NPERMISOS\$} es la cantidad de opciones que puede tener la plataforma, siendo cada posición una de estas opaciones}
+% Relaciones
+
+\umlinherit[geometry=-|]{Carpeta}{Elemento}
+
+\umlcompo[mult1=0..n, mult2=1]{Elemento}{Carpeta}
+
+\umlinherit{Archivo}{Elemento}
+
+\umlcompo[mult2=1, mult1=0..n]{Elemento}{Estado}
+
+\umlimpl{Pizarra}{Nivel}
+
+\umlimpl[geometry=-|]{Pizarra}{Estado}
+
+\umlimpl{Pizarra}{Configuracion}
+
+\umlimpl{Pizarra}{Estadisticas}
+
+\umlimpl{Pizarra}{Usuario}
+
+\umlimpl{Agente}{Pizarra}
+
+\end{tikzpicture}
+
+}
+
+\newcommand{\clasesanalisis}{
+
+\begin{tikzpicture}
+\tikzumlset{fill class=white}
+% Clase Pizarra
+\umlclass[x=-6, y=5]{Pizarra}{
+  -- estado : Estado \\ 
+  -- usuarios : Vector$<$Usuario$>$\\
+  -- estadisticas : Vector$<$Estadisticas$>$\\
+  -- niveles : Vector$<$Nivel$>$\\
+  -- conf : Configuracion\\
+}{}
+
+% Clase Agente
+\umlclass[x=-6, y=-2.5]{Agente}{
+  -- userid : String\\
+  -- pass : String\\
+  -- pizarra : Pizarra\\
+  -- usuario : Usuario\\
+}{}
+
+% Clase Usuario
+\umlclass[x=2, y=-1]{Usuario}{
+  -- nombre : String\\
+  -- userid : String\\
+  -- pass : String\\
+  -- nivel : Nivel
+}{}
+
+% Clase Estadisticas
+\umlclass[x=2, y=3]{Estadisticas}{
+  -- userid : String\\
+  -- datos[] : Integer\\
+}{}
+
+% Clase Configuracion
+\umlclass[x=2, y=9.5]{Configuracion}{
+  -- visibilidad : Bool\\
+  -- ip : IP\\
+  -- puerto : int\\
+  -- maxConexion : int\\
+  -- espacio : int\\
+  -- maxUser : int\\
+  -- depuracion : Bool\\
+}{}
+
+% Clase Estado
+\umlclass[x=-9, y=10]{Estado}{
+  -- Vector$<$Elemento$>$
+}{}
+
+% Clase Elemento
+\umlclass[x=-16, y=10]{Elemento}{
+   \# nombre : String
+}{}
+
+% Clase Carpeta
+\umlclass[x=-18, y=6]{Carpeta}{
+   -- Vector$<$Elemento$>$
+}{}
+
+% Clase Archivo
+\umlclass[x=-13, y=7]{Archivo}{
+
+}{}
+
+% Clase Nivel
+\umlclass[x=-16, y=-2]{Nivel}{
+   -- permisos[] : Bool
+}{}
+
+
 
 % Relaciones
 
