Añadidas nuevas palabras al glosario

--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -55,3 +55,48 @@ short = {CPU},
 word ={Kernel},
 definition={Traducción al español: Núcleo; En informática se refiere al elemento central de un programa, generalmente un Sistema Operativo},
 }
+
+@GLOSDEF{LaTeX,
+word ={LaTeX},
+definition={sistema de composición de textos, orientado especialmente a la creación de libros, documentos científicos y técnicos que contengan fórmulas matemáticas.},
+}
+
+@GLOSDEF{GitHub,
+word ={GitHub},
+definition={Plataforma online que alojar proyectos utilizando el sistema de control de versiones Git.},
+}
+
+@GLOSDEF{RAM,
+word ={RAM},
+definition={Memoria de acceso aleatorio, se utiliza como memoria de trabajo para el sistema operativo, los programas y la mayoría del software.},
+}
+
+@GLOSDEF{SO,
+word ={Sistema Operativo},
+definition={Programa o conjunto de programas que en un sistema informático gestiona los recursos de hardware.},
+}
+
+@GLOSDEF{x86,
+word ={x86},
+definition={Conjunto de instrucciones utilizada en la microarquitectura de CPU de 32 bits.},
+}
+
+@GLOSDEF{x64,
+word ={64},
+definition={Conjunto de instrucciones utilizada en la microarquitectura de CPU de 64 bits.},
+}
+
+@GLOSDEF{UML,
+word ={UML},
+definition={Lenguaje de modelado de sistemas de software más conocido y utilizado en la actualidad.},
+}
+
+@GLOSDEF{C++,
+word ={C++},
+definition={Lenguaje de programación diseñado a mediados de los años 1980 por Bjarne Stroustrup.},
+}
+
+
+
+
+
