--- a/memoria/partes/a/capitulo2.tex
+++ b/memoria/partes/a/capitulo2.tex
@@ -55,7 +55,7 @@ Siguiendo un orden de menor a mayor nivel, comenzaremos con el \emph{hardware} p
 Quizás lo primero que tengamos que hacer es explicar el encabezado del apartado, ¿Por qué \emph{\textquotedblleft hardware real\textquotedblright}?.\\
 Para contestar a esto es necesario conocer los componentes de una máquina virtual (\textit{Véase apartado \ref{apartadomaqvir}}), pues ésta tiene también elementos hardware y el calificativo \emph{\textquotedblleft real\textquotedblright} es lo que los diferencia.\\
 
-Este elemento hardware se refiere, como es obvio, al computador físicamente hablando, es decir, al aparato electrónico generalmente conectado a una toma de luz y sus componentes físicos: la memoria RAM, el \gloss[short]{HDD}  y su \gloss[short]{CPU}. Por tanto, a partir de ahora vamos a representar el hardware como:
+Este elemento hardware se refiere, como es obvio, al computador físicamente hablando, es decir, al aparato electrónico generalmente conectado a una toma de luz y sus componentes físicos: la memoria \gloss{RAM}, el \gloss[short]{HDD}  y su \gloss[short]{CPU}. Por tanto, a partir de ahora vamos a representar el hardware como:
 
 \begin{figure}[H]
 \begin{center}
