--- a/memoria/partes/a/capitulo3.tex
+++ b/memoria/partes/a/capitulo3.tex
@@ -29,7 +29,7 @@ Entre las que hemos encontrado nos gustaría destacar:
 \item Es la herramienta con mayor soporte en cuanto a empresas se refiere del mercado.
 \item Especialmente diseñada para dar funcionalidad a múltiples computadoras.
 \item Soporta redes virtuales, lo que permite un mayor control sobre las conexiones que se realizan.
-\item Soporta la virtualización de sistemas x64 en ordenadores x86.
+\item Soporta la virtualización de sistemas \gloss{x64} en ordenadores \gloss{x86}.
 \end{itemize}
 
 Pero sin duda si queremos explicar por qué la universidad escogió este sistema, se debe a su potencia para un gran número de ordenadores; tal y como se da el caso de la universidad, donde prácticamente todos los computadores se encuentran virtualizados.
