--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -1,7 +1,7 @@
 \chapter{Documentación}
 \lettrine[lines=1,slope=4pt,findent=0pt]{U}{}na vez introducida la arquitectura de pizarra y la estructura básica que tendrá la plataforma daremos paso a una documentación detallada de la misma.\\
 
-Para abordar la documentación de la plataforma ha sido necesario obtener previamente una lista de requisitos, para después, una vez desarrollados y clasificados convenientemente, dar lugar a la realización de los diagramas UML correspondientes que definen el diseño de la plataforma.\\
+Para abordar la documentación de la plataforma ha sido necesario obtener previamente una lista de requisitos, para después, una vez desarrollados y clasificados convenientemente, dar lugar a la realización de los diagramas \gloss{UML} correspondientes que definen el diseño de la plataforma.\\
 
 Ahora centrémonos en cómo hemos obtenido esos requisitos y a que conclusiones hemos llegado.
 
@@ -101,7 +101,7 @@ Para solucionar esto, se han extraído de los requisitos anteriores, la funciona
 					\end{itemize}
 			\item \textbf{Organizacionales}
 					\begin{itemize}
-					\item La plataforma se realizará con el lenguaje de programación C++.
+					\item La plataforma se realizará con el lenguaje de programación \gloss{C++}.
 					\item La plataforma estará implementada siguiendo una arquitectura de pizarra.
 					\item La pizarra y los agentes siguen un modelo cliente-servidor.
 					\item La comunicación entre la pizarra y el agente (modelo cliente-servidor) seguirá una encriptación SSL.
@@ -118,7 +118,7 @@ Ahora, ya tenemos unos requisitos reales de nuestra plataforma con los que poder
 
 \subsection{¿Son válidos estos requisitos?}
 
-Cómo se trata una librería, nos surgía la dudad de que si los requisitos obtenidos nos eran válidos para el diseño.\\
+Como se trata una librería, nos surgía la duda de que si los requisitos obtenidos nos eran válidos para el diseño.\\
 
 Pronto descubrimos que sí eran válidos, pero no eran eficientes, al estar todos mezclados era difícil saber por donde había que comenzar el diseño, por lo que optamos por organizar los requisitos de otra manera.
 
