--- a/memoria/partes/prefacio.tex
+++ b/memoria/partes/prefacio.tex
@@ -38,7 +38,7 @@ Por este motivo también, un simple archivo \emph{*.doc} no nos valía, ya que \
 
 Por todos ello el resultado de una tarde de organización fue realizar la memoria de la práctica en lenguaje \LaTeX~ en un repositorio en GitHub\cite{repositorio}.
 
-\subsection*{¿Por qué GitHub?}
+\subsection*{¿Por qué \glossary{GitHub}?}
 Esta plataforma junto con el control de versiones git\cite{git} nos ha permitido trabajar sobre un repositorio al que todos los miembros del grupo teníamos acceso y mediante el cuál podíamos compartir nuestras dudas y sugerencias y trabajar cada uno a su aire, sin estar limitado a una repartición de trabajo; si nos atascábamos en una cosa, podíamos continuar con otra sin problemas porque todos teníamos el control sobre el estado actual de la práctica.\\
 
 Hemos elegido usar GitHub por los siguientes motivos:
@@ -52,7 +52,7 @@ Todos los archivos de esta práctica se encontrarán disponibles en la direcció
 \url{https://github.com/KekoAlk/Practica_DAS}, correspondiente con el repositorio de trabajo.
 
 \subsection*{¿Por qué \LaTeX?}
-\LaTeX~ es un sistema de composición de textos profesional, es la herramienta más potente de creación de documentos que conocemos, que permite separar de forma fácil el contenido de un único archivo en varios, ya que en el fondo se trata de un lenguaje de programación, de forma que trabajar de forma distribuida sea bastante cómoda.\\
+\gloss{LaTeX}~ es un sistema de composición de textos profesional, es la herramienta más potente de creación de documentos que conocemos, que permite separar de forma fácil el contenido de un único archivo en varios, ya que en el fondo se trata de un lenguaje de programación, de forma que trabajar de forma distribuida sea bastante cómoda.\\
 
 Además, los archivos son texto plano por lo que, junto a GitHub, hace que se pueda ver qué se ha añadido o borrado en un documento de forma sencilla. También es un sistema que separa el contenido de la presentación, por lo que facilita centrarse en el contenido y no tanto en su presentación.\\
 
