Corregido error diagrama de secuencia

--- a/memoria/partes/b/capitulo3.tex
+++ b/memoria/partes/b/capitulo3.tex
@@ -288,13 +288,13 @@ El diagrama de secuencia es un diagrama UML utilizado para modelar la interacci√
 
 Los diagramas de secuencia correspondientes a los casos de uso de nuestra plataforma se ponen a continuaci√≥n.
 
-\textbf{Actualizar estado:} (\emph{Figura \ref{fig:seqActualizarEstado}}) 
+\textbf{Actualizar estado:} (\emph{Figura \ref{fig:seqactualizarestado}}) 
 
 \begin{figure}[H]
 \centering
-\configurarPizarra
-\caption{Diagrama de secuencia de Actualizar estado}
-\label{fig:seqActualizarEstado}
+\seqActualizarEstado
+\caption{Diagrama de secuencia de actualizar estado}
+\label{fig:seqactualizarestado}
 \end{figure}
 
 
