--- a/memoria/figuras.tex
+++ b/memoria/figuras.tex
@@ -156,7 +156,7 @@
 	\node at (0.7,1.125) {\textsc{E/S}};
 	\node at (2.75,1.125) {{\small \textsc{Interrupciones}}};
 	\node at (5.4,1.125) {{\footnotesize \textsc{Mapa pág.}}};
-	\node at (3.5,0.5) {\textsc{Organizador (\emph{Scheduler})}};
+	\node at (3.5,0.5) {\textsc{\gloss[long]{ORG}}};
 	
 	\node at (8.2,1.4) {\textsc{Kernel}};
 	\node at (8.2,0.9) {\textsc{Básico}};
