--- a/memoria/glosario.bib
+++ b/memoria/glosario.bib
@@ -51,6 +51,12 @@ definition ={Unidad de procesos de un computador, es el elemento encargado de re
 short = {CPU},
 }
 
+@GLOSDEF{ORG,
+word = {Organizador},
+definition ={Tan bien conocido como planificador, es el elemneto encargado de gestionar los recursos reales que posee para proporcionarselos a la máquina virtual},
+short = {Scheduler},
+}
+
 @GLOSDEF{KERNEL,
 word ={Kernel},
 definition={Traducción al español: Núcleo; En informática se refiere al elemento central de un programa, generalmente un Sistema Operativo},
@@ -82,7 +88,7 @@ definition={Conjunto de instrucciones utilizada en la microarquitectura de CPU d
 }
 
 @GLOSDEF{x64,
-word ={64},
+word ={x64},
 definition={Conjunto de instrucciones utilizada en la microarquitectura de CPU de 64 bits.},
 }
 
