--- a/memoria/partes/b/parteB.tex
+++ b/memoria/partes/b/parteB.tex
@@ -2,3 +2,4 @@
 \input{./partes/b/capitulo2.tex}
 \input{./partes/b/capitulo3.tex}
 \input{./partes/b/capitulo4.tex}
+\input{./partes/b/capitulo5.tex}
