Cambio color diagrama casos de uso

--- a/memoria/diagramas/diag_casos.tex
+++ b/memoria/diagramas/diag_casos.tex
@@ -2,6 +2,8 @@
 
 \newcommand{\casosdeuso}{
 \begin{tikzpicture}
+\tikzumlset{fill usecase=white}
+\tikzumlset{fill note=gray!30}
 \umlusecase[name=configPizarra]{Configurar pizarra}
 \umlusecase[y=-1, name=crearCarpeta]{Crear carpeta}
 \umlusecase[y=-2, name=buscar]{Buscar}
@@ -42,6 +44,8 @@
 
 \newcommand{\casos}{
 \begin{tikzpicture}
+\tikzumlset{fill usecase=white}
+\tikzumlset{fill note=gray!30}
 \tikzumlset{font=\tiny}
 
 \umlactor[x=6, y=3]{USUARIO}
