Corregidas cap. 2 parte b

--- a/memoria/partes/b/capitulo2.tex
+++ b/memoria/partes/b/capitulo2.tex
@@ -44,7 +44,7 @@ Lista de requisitos de una posible aplicación:
 			\item Los agentes no deben poder interrelacionarse entre ellos si no es a través de la pizarra.
 			\item Debe haber distintos tipos de usuarios: profesores y alumnos.
 			\item La pizarra debe permitir la creación de apartados para los ejercicios, por ejemplo Tema 1.
-			\item La pizarra debe guardar el progreso de cada usuario, mediante gráficos, estadísticas, etc
+			\item La pizarra debe guardar el progreso de cada usuario, mediante gráficos, estadísticas, etc.
 			\item La pizarra debe distinguir los distintos tipos de ejercicios de los alumnos.
 			\item La pizarra debe reconocer los tipos de archivo de los ejercicios.
 		\end{itemize}
@@ -77,12 +77,12 @@ Para solucionar esto, se han extraído de los requisitos anteriores, la funciona
 			\item La pizarra debe permitir la creación de carpetas donde guardar los elementos para organizarlos.
 			\item La pizarra debe permitir crear nuevos usuarios.
 			\item La pizarra permitirá la creación de nuevos usuarios.
-			\item La pizarra debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, estadísticas, etc
+			\item La pizarra debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, estadísticas, etc.
 			\item La pizarra debe distinguir los distintos tipos de elementos de los agentes.
 			\item La pizarra debe reconocer los tipos de archivo de los elementos.
 			\item La pizarra debe ser capaz de comparar dos archivos con el objetivo de buscar diferencias.
 			\item La pizarra debe permitir realizar una búsqueda de un archivo por su nombre.
-			\item La pizarra debe permitir ser configurada como "pública" o "privada".
+			\item La pizarra debe permitir ser configurada como ``pública'' o ``privada''.
 			\item El agente pedirá los credenciales del usuario al comenzar.
 			\item El agente se encargará de revisar la veracidad de los credenciales del usuario.
 			\item El agente adquirirá permisos y funciones dependiendo del usuario que lo ese usando.
@@ -168,7 +168,7 @@ Lista con todos los requisitos de librería.
 		\begin{itemize}
 			\item La plataforma se gestiona mediante usuarios.
 					\item La plataforma permitirá la creación de nuevos usuarios.
-					\item La plataforma debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, porcentajes, etc
+					\item La plataforma debe guardar las estadísticas de colaboración de cada usuario, mediante gráficos, porcentajes, etc.
 					\item La plataforma pedirá las credenciales del usuario al comenzar.
 					\item La plataforma se encargará de revisar la veracidad de los credenciales del usuario.
 					\item El agente adquirirá permisos y funciones dependiendo del usuario que lo ese usando.
@@ -192,7 +192,5 @@ Lista con todos los requisitos de librería.
 			\item \textbf{Externos}
 		\end{itemize}
 \end{itemize}
-
-
 
 Ahora sí, con estos requisitos estamos plenamente preparados para comenzar el diseño de la plataforma, eso sí, comenzando primero por la arquitectura de pizarra.
