--- a/memoria/bibliografia/bibliografia.bib
+++ b/memoria/bibliografia/bibliografia.bib
@@ -129,3 +129,8 @@ number = {7},
   title = {Blackboard Systems},
   year = {1986}
 }
+
+@Misc{QT,
+title = {Página oficial de Qt},
+howpublished = {\url{http://qt.digia.com}},
+}
